feature/ add Auth0 login and logout

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^1.9.2",
     "microcms-js-sdk": "^2.3.1",
     "next": "latest",
     "react": "18.2.0",
