--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^1.9.2",
+    "firebase": "^9.14.0",
     "microcms-js-sdk": "^2.3.1",
     "next": "latest",
     "react": "18.2.0",
